--- a/courses.html
+++ b/courses.html
@@ -463,7 +463,51 @@
             </div>
           </div> 
 
-           
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-02.jpg" />
+            <img  class="instructor" src="Image/team-02.png " />
+            <div class="header">
+              <h4 class="m-0">Data Structure And Algorithms</h4>
+              <p class="description mt-15 fs-14  c-gray">Master The Art Of Data Strcuture And Famous Algorithms Like Sorting, Dividing And Conquering</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div> 
+
+          <div class="course bg-w red-6 p-relative">
+            <img  class="cover" src="Image/course-01.jpg" />
+            <img  class="instructor" src="Image/team-03.png " />
+            <div class="header">
+              <h4 class="m-0">Responsive Web Design </h4>
+              <p class="description mt-15 fs-14  c-gray">Mastering Responsive Web Design And Media Queries And Know Everything About Breakpoints</p>
+            </div> 
+            <div class="info p-15 p-relative flex-between">
+              <span class="title bg-blue c-w red-6 p-5 btn">Course Info</span>
+
+            </div>
+            <div class=" content flex-between ">
+              <span class="c-gray">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                950
+              </span> 
+              <span class="c-gray">
+                <i class="fas fa-dollar-sign    "></i>
+                950
+              </span>
+            </div>
+          </div>  
 
         </div>
       </div>
