--- a/Profile.html
+++ b/Profile.html
@@ -54,19 +54,19 @@
           </a>
         </li>
         <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
+          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="friends.html">
             <i class="fa-solid fa-user-group"></i>
             <span>Friends</span>
           </a>
         </li>
         <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
+          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="Files.html">
             <i class="fa-regular fa-file"></i>
             <span>Files</span>
           </a>
         </li>
         <li>
-          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
+          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="Plans.html">
             <i class="fa fa-holly-berry"></i>
             <span>Plans</span>
           </a>
