--- a/project.html
+++ b/project.html
@@ -79,7 +79,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 red-6 p-10 c-black"
-              href="index.html"
+              href="friends.html"
             >
               <i class="fa-solid fa-user-group"></i>
               <span>Friends</span>
@@ -88,7 +88,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 red-6 p-10 c-black"
-              href="index.html"
+              href="Files.html"
             >
               <i class="fa-regular fa-file"></i>
               <span>Files</span>
@@ -97,7 +97,7 @@
           <li>
             <a
               class="d-flex align-center fs-14 red-6 p-10 c-black"
-              href="index.html"
+              href="Plans.html"
             >
               <i class="fa fa-holly-berry"></i>
               <span>Plans</span>
