finish-design at 10/25

--- a/Plans.html
+++ b/Plans.html
@@ -1,130 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/master.css" />
-    <link rel="stylesheet" href="css/framework.css" />
-    <link rel="icon" href="Image/dashboard.png" />
-    <title>Dashbord</title>
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/824a87a2e1.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <div class="page d-flex">
-      <div class="slider bg-w p-relative">
-        <h3 class="p-relative txt-c">Admin</h3>
-        <ul class="list-none p-0">
-          <li>
-            <a
-              class="d-flex align-center fs-14 red-6 p-10 c-black"
-              href="index.html"
-            >
-              <i class="fa fa-chart-line fa-fw"></i>
-              <span>Dashboard</span>
-            </a>
-          </li>
-          <li>
-            <a
-              class="d-flex align-center fs-14 red-6 p-10 c-black"
-              href="settings.html"
-            >
-              <i class="fa fa-gear"></i>
-              <!-- <i class="fa-solid fa-thumbs-up fa-5x"></i> -->
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/master.css" />
+  <link rel="stylesheet" href="css/framework.css" />
+  <link rel="icon" href="Image/dashboard.png" />
+  <title>Dashbord</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;700&display=swap" rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/824a87a2e1.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500&display=swap" rel="stylesheet" />
+</head>
 
-              <span>Setting</span>
-            </a>
-          </li>
-          <li>
-            <a
-              class="d-flex align-center fs-14 red-6 p-10 c-black"
-              href="Profile.html"
-            >
-              <i class="fa-regular fa-user"></i> <span>Profile</span>
-            </a>
-          </li>
-          <li>
-            <a
-              class="d-flex align-center fs-14 red-6 p-10 c-black"
-              href="project.html"
-            >
-              <i class="fa fa-diagram-project"></i>
-              <span>Projects</span>
-            </a>
-          </li>
-          <li>
-            <a
-              class=" d-flex align-center fs-14 red-6 p-10 c-black"
-              href="courses.html"
-            >
-              <i class="fa-solid fa-address-book"></i>
-              <span>Courses</span>
-            </a>
-          </li>
-          <li>
-            <a
-              class="  d-flex align-center fs-14 red-6 p-10 c-black"
-              href="friends.html"
-            >
-              <i class="fa-solid fa-user-group"></i>
-              <span>Friends</span>
-            </a>
-          </li>
-          <li>
-            <a
-              class="  d-flex align-center fs-14 red-6 p-10 c-black"
-              href="Files.html"
-            >
-              <i class="fa-regular fa-file"></i>
-              <span>Files</span>
-            </a>
-          </li>
-          <li>
-            <a
-              class="active d-flex align-center fs-14 red-6 p-10 c-black"
-              href="Plans.html"
-            >
-              <i class="fa fa-holly-berry"></i>
-              <span>Plans</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="content w-full">
-        <div class="head bg-w p-15 flex-between">
-          <div class="search p-relative">
-            <!-- <i class="icon fa fa-search" aria-hidden="true"></i> -->
-            <input
-              style="padding: 10px"
-              type="text"
-              placeholder="Type a keyword"
-            />
-          </div>
-          <div class="icons d-flex align-center">
-            <span class="notification p-relative">
-              <i class="fa-regular fa-bell fa-lg"></i>
-            </span>
-            <img src="Image/avatar.png" alt="" />
-          </div>
+<body>
+  <div class="page d-flex">
+    <div class="slider bg-w p-relative">
+      <h3 class="p-relative txt-c">Admin</h3>
+      <ul class="list-none p-0">
+        <li>
+          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="index.html">
+            <i class="fa fa-chart-line fa-fw"></i>
+            <span>Dashboard</span>
+          </a>
+        </li>
+        <li>
+          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="settings.html">
+            <i class="fa fa-gear"></i>
+            <!-- <i class="fa-solid fa-thumbs-up fa-5x"></i> -->
+
+            <span>Setting</span>
+          </a>
+        </li>
+        <li>
+          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="Profile.html">
+            <i class="fa-regular fa-user"></i> <span>Profile</span>
+          </a>
+        </li>
+        <li>
+          <a class="d-flex align-center fs-14 red-6 p-10 c-black" href="project.html">
+            <i class="fa fa-diagram-project"></i>
+            <span>Projects</span>
+          </a>
+        </li>
+        <li>
+          <a class=" d-flex align-center fs-14 red-6 p-10 c-black" href="courses.html">
+            <i class="fa-solid fa-address-book"></i>
+            <span>Courses</span>
+          </a>
+        </li>
+        <li>
+          <a class="  d-flex align-center fs-14 red-6 p-10 c-black" href="friends.html">
+            <i class="fa-solid fa-user-group"></i>
+            <span>Friends</span>
+          </a>
+        </li>
+        <li>
+          <a class="  d-flex align-center fs-14 red-6 p-10 c-black" href="Files.html">
+            <i class="fa-regular fa-file"></i>
+            <span>Files</span>
+          </a>
+        </li>
+        <li>
+          <a class="active d-flex align-center fs-14 red-6 p-10 c-black" href="Plans.html">
+            <i class="fa fa-holly-berry"></i>
+            <span>Plans</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <div class="content w-full">
+      <div class="head bg-w p-15 flex-between">
+        <div class="search p-relative">
+          <!-- <i class="icon fa fa-search" aria-hidden="true"></i> -->
+          <input style="padding: 10px" type="text" placeholder="Type a keyword" />
         </div>
-        <h1 class="p-relative">Plans</h1>
- 
+        <div class="icons d-flex align-center">
+          <span class="notification p-relative">
+            <i class="fa-regular fa-bell fa-lg"></i>
+          </span>
+          <img src="Image/avatar.png" alt="" />
+        </div>
+      </div>
+      <h1 class="p-relative">Plans</h1>
+      <div class="plans-page d-grid m-20 gap-20">
+        <div class="plan green bg-w p-20">
+          <div class="top bg-green txt-c p-20">
+            <h2 class="m-0 c-w">Free</h2>
+            <div class="price c-w">
+              <span>$</span>0.00
+            </div>
+          </div>
+          <ul>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Access All Text Lessons</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Access All Videos Lessons</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Appear On Leaderboard</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+
+            <li>
+              <i class="fa-regular fa-circle-xmark c-r "></i>
+              <span>Browse Content Without Ads</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+
+            <li>
+              <i class="fa-regular fa-circle-xmark c-r "></i>
+              <span>Access All Assignments</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+
+            <li>
+              <i class="fa-regular fa-circle-xmark c-r "></i>
+              <span>Get Daily Prizes</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+            <li>
+              <i class="fa-regular fa-circle-xmark c-r "></i>
+              <span>Earn Certificate</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+            <li>
+              <i class="fa-regular fa-circle-xmark c-r "></i>
+              <span>1 GB Space For Hosting Files</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+            <li>
+              <i class="fa-regular fa-circle-xmark c-r "></i>
+              <span>Access Badge System</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+
+
+          </ul>
+          <a class="d-block bg-green btn c-w txt-c">Join</a>
+        </div>
+
+        <div class="plan blue bg-w p-20">
+          <div class="top bg-blue txt-c p-20">
+            <h2 class="m-0 c-w">Basic</h2>
+            <div class="price c-w">
+              <span>$</span>90.80
+            </div>
+          </div>
+          <ul>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Access All Text Lessons</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Access All Videos Lessons</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Appear On Leaderboard</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+
+            <li>
+              <i class="fa fa-check-square yes "></i>
+
+              <span>Browse Content Without Ads</span>
+
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+
+            <li>
+              <i class="fa fa-check-square yes "></i>
+
+              <span>Access All Assignments</span>
+
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+
+            <li>
+              <i class="fa fa-check-square yes "></i>
+
+              <span>Get Daily Prizes</span>
+
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+
+              <span>Earn Certificate</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+            <li>
+              <i class="fa-regular fa-circle-xmark c-r "></i>
+              <span>1 GB Space For Hosting Files</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+            <li>
+              <i class="fa-regular fa-circle-xmark c-r "></i>
+              <span>Access Badge System</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+
+
+          </ul>
+          <a class="d-block bg-blue btn c-w txt-c">Join</a>
+        </div>
+
+        <div class="plan orange bg-w p-20">
+          <div class="top bg-orange txt-c p-20">
+            <h2 class="m-0 c-w">Premium</h2>
+            <div class="price c-w">
+              <span>$</span>290.80
+            </div>
+          </div>
+          <ul>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Access All Text Lessons</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Access All Videos Lessons</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Appear On Leaderboard</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+
+            <li>
+              <i class="fa fa-check-square yes "></i>
+
+              <span>Browse Content Without Ads</span>
+
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+
+            <li>
+              <i class="fa fa-check-square yes "></i>
+
+              <span>Access All Assignments</span>
+
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+
+            <li>
+              <i class="fa fa-check-square yes "></i>
+
+              <span>Get Daily Prizes</span>
+
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+
+              <span>Earn Certificate</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>1 GB Space For Hosting Files</span>
+              <i class="fa fa-circle-info help"></i>
+
+            </li>
+            <li>
+              <i class="fa fa-check-square yes "></i>
+              <span>Access Badge System</span>
+              <i class="fa fa-circle-info help"></i>
+            </li>
+
+
+          </ul>
+          <a class="d-block   c-gray txt-c">This Is Your Current Plan</a>
+        </div>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
